css/2_Description.css
.Description {
  font-weight: bold;
  font-size: 30px;
  color: black;
  background: #ffba7a;
  display: flex;
  height: 49.44vw;
}
.description-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  padding-left: 5rem;
  width: 53vw;
}
.image-container {
  height: 100%;
}
.description-heading,
.description-sub-heading {
  font-family: Rubik;
}
.description-heading {
  font-size: 3.33vw;
  font-weight: 500;
  margin: 0;
  margin-bottom: 0.3rem;
}
.underline {
  border-top: 0.14vw solid #eb5310;
  width: 13vw;
  height: 0px;
}
.description-sub-heading {
  font-style: normal;
  font-weight: 500;
  font-size: 1.67vw;
  margin: 1rem 0rem;
  line-height: 1.9vw;
}
.desc-description {
  font-family: Roboto;
  font-style: normal;
  font-weight: normal;
  font-size: 1.4vw;
  line-height: 1.7vw;
  /* margin: 1rem 0rem; */

}
.desc-illust {
  position: absolute;
  width: 36%;
  left: 60%;
  top: 10vw;
}
.desc-dot-illust {
  position: absolute;
  width: 15%;
  left: 81%;
  top: 11vw;
}
/* @media screen and (max-width: 1024px) {
  .Description {
    flex-direction: column;
    height: 40vh;
  }
  .description-container{
    margin: 3rem;
    width: auto;
    padding: 0;
  }
  .desc-illust{
    top: 30%;
    left: 25%;
  }
  .desc-dot-illust{
    top: 30%;
    left: 50%;
  }
} */

